# kafka-tester

./: Cargo.toml
src/: main.rs
